target_sources(${EXECUTABLE_NAME} PRIVATE main.c)
theseus_mark_first_party(${EXECUTABLE_NAME} main.c)

target_link_libraries(${EXECUTABLE_NAME} PRIVATE log rng bluetooth)

target_compile_definitions(bluetooth PRIVATE
MYNEWT_VAL_BLE_ROLE_CENTRAL=0
MYNEWT_VAL_BLE_ROLE_PERIPHERAL=1
MYNEWT_VAL_BLE_MULTI_ADV_INSTANCES=0
MYNEWT_VAL_BLE_ROLE_BROADCASTER=1
MYNEWT_VAL_BLE_ROLE_OBSERVER=0
MYNEWT_VAL_BLE_PHY_2M=1
MYNEWT_VAL_BLE_MAX_CONNECTIONS=0 # This is the sum of the two next definitions
BLE_MAX_PERIPHERAL_CONNECTIONS=0
BLE_MAX_CENTRAL_CONNECTIONS=0
)
