target_sources(${EXECUTABLE_NAME} PRIVATE main.c)
theseus_mark_first_party(${EXECUTABLE_NAME} main.c)

target_link_libraries(${EXECUTABLE_NAME} PRIVATE log rng bluetooth)

target_compile_definitions(bluetooth PRIVATE
MYNEWT_VAL_BLE_ROLE_CENTRAL=0
MYNEWT_VAL_BLE_ROLE_PERIPHERAL=1
MYNEWT_VAL_BLE_ROLE_BROADCASTER=1
MYNEWT_VAL_BLE_ROLE_OBSERVER=0
MYNEWT_VAL_BLE_MAX_CONNECTIONS=0
MYNEWT_VAL_BLE_WHITELIST=0
MYNEWT_VAL_BLE_MAX_PERIODIC_SYNCS=1
MYNEWT_VAL_BLE_MULTI_ADV_INSTANCES=0
MYNEWT_VAL_BLE_EXT_ADV=0
MYNEWT_VAL_BLE_PERIODIC_ADV=0
MYNEWT_VAL_BLE_PERIODIC_ADV_SYNC_TRANSFER=0
MYNEWT_VAL_BLE_PERIODIC_ADV_SYNC_BIGINFO_REPORTS=0
MYNEWT_VAL_BLE_EXT_ADV_MAX_SIZE=0
MYNEWT_VAL_BLE_VERSION=50
MYNEWT_VAL_BLE_ISO=0
MYNEWT_VAL_BLE_ISO_BROADCAST_SOURCE=0
MYNEWT_VAL_BLE_ISO_BROADCAST_SINK=0
MYNEWT_VAL_BLE_ISO_TEST=0
MYNEWT_VAL_BLE_CHANNEL_SOUNDING=0
MYNEWT_VAL_BLE_HCI_VS=0
MYNEWT_VAL_BLE_HCI_VS_OCF_OFFSET=0
MYNEWT_VAL_BLE_POWER_CONTROL=0
MYNEWT_VAL_BLE_CONN_SUBRATING=0
MYNEWT_VAL_BLE_PHY_2M=0
MYNEWT_VAL_BLE_PHY_CODED=0
)
