target_sources(${PROJECT_NAME}.elf PRIVATE main.c)
theseus_mark_first_party(${EXECUTABLE_NAME} main.c)

target_compile_definitions(${EXECUTABLE_NAME} PRIVATE NRFX_CLOCK_ENABLED=1)

target_link_libraries(${EXECUTABLE_NAME} PRIVATE log rng bluetooth)

target_compile_definitions(bluetooth PRIVATE
MYNEWT_VAL_BLE_ROLE_CENTRAL=1
MYNEWT_VAL_BLE_ROLE_PERIPHERAL=0
MYNEWT_VAL_BLE_MULTI_ADV_INSTANCES=0
MYNEWT_VAL_BLE_ROLE_BROADCASTER=0
MYNEWT_VAL_BLE_ROLE_OBSERVER=1
MYNEWT_VAL_BLE_PHY_2M=1
MYNEWT_VAL_BLE_MAX_CONNECTIONS=0
)
